Geen Results teruggeven bij Validatie ed. Opschonen en code cleanup

--- a/sample/SilentRed.WebCore/Views/Home/Index.cshtml
+++ b/sample/SilentRed.WebCore/Views/Home/Index.cshtml
@@ -1,7 +1,7 @@
-﻿@model SilentRed.WebCore.Customers.Queries.AllCustomers.Result
+﻿@model SilentRed.WebCore.Customers.AllCustomers.Result
 
 @{
-   ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Home Page";
 }
 
 <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
